// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 fvTsro flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 fvTsro flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 khUEIG flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 ohMja flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 fvTsro flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 eDOuDm flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 A-dHfY flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 bvIWaH flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 a-DwVX flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 gviNFp flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 jPfUWc flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-w9wbbm-0 fvTsro flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent"
  >
    <div
      class="sc-bdvvtL Cfvxc"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;
